add some features

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 					<!-- your skills -->
                        <h3>General Programming</h3>
                      <p>HTML,CSS,JAVASCRIPT</p>
-                     <!-- <h3>Library/FrameWork</h3>
+                     <h3>Library/FrameWork</h3>
                      <p>React.js,Vite.js</p>
                      <h3>Operating System</h3>
                      <p>Windows,VsCode</p>
                      <h3>Other</h3>
-                     <p>git,github</p> -->
+                     <p>git,github</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
